--- a/html/index.html
+++ b/html/index.html
@@ -8,8 +8,8 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="icon" type="image/png" href="IMG/wolf_icon.png"/>
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="icon" type="image/png" href="../IMG/wolf_icon.png"/>
   <script src="https://kit.fontawesome.com/f2f7800810.js"></script>
   <title>CV Gordet Axel</title>
 </head>
@@ -51,9 +51,9 @@
 
   <div class="scroll">
 
-    <a href="tel:+33688401046"> <img src="IMG/tel.png" class="img_contact" alt="contact"></a>
-    <a href="mailto:axel.gordet.pop@gmail.com"><img src="IMG/mail.png" class="img_contact" alt="contact"></a>
-    <a href="https://www.linkedin.com/in/axel-gordet-29bb29189/"><img src="IMG/link.png" class="img_contact"
+    <a href="tel:+33688401046"> <img src="../IMG/tel.png" class="img_contact" alt="contact"></a>
+    <a href="mailto:axel.gordet.pop@gmail.com"><img src="../IMG/mail.png" class="img_contact" alt="contact"></a>
+    <a href="https://www.linkedin.com/in/axel-gordet-29bb29189/"><img src="../IMG/link.png" class="img_contact"
         alt="contact"></a>
 
   </div>
@@ -63,7 +63,7 @@
 
   <!--Banniere avec NOM + redirection direct vers les infos générales sur moi-->
   <div class="banner">
-    <img src="IMG/banner2.jpg" class="img-fluid" alt="Responsive image">
+    <img src="../IMG/banner2.jpg" class="img-fluid" alt="Responsive image">
     <div class="name_cv">
         <a class="nav-link" href="#info"><h1>Axel Gordet</h1></a></br>
       <p class="sous_cv">Aspirant Web Developper</p>
@@ -83,7 +83,7 @@
   <div class="container_info">
 
     <div class="container_info--picture">
-      <img src="IMG/IMG_1492.jpg" class="picture_me" alt="photo_cv">
+      <img src="../IMG/IMG_1492.jpg" class="picture_me" alt="photo_cv">
 
     </div>
 
@@ -124,23 +124,23 @@
   <div class="container_info">
 
     <div class="container_info--picture">
-      <img src="IMG/skill2.jpg" class="picture_me" alt="skill">
+      <img src="../IMG/skill2.jpg" class="picture_me" alt="skill">
 
     </div>
 
     <div class="container_info--CV">
       <h2>Skills :</h2>
       <div class="logo_block">
-        <img src="IMG/html_logo.png" class="logo_skill" alt='logo'>
-        <img src="IMG/css_logo.png" class="logo_skill" alt='logo'>
-        <img src="IMG/sass_logo.png" class="logo_skill" alt='logo'>
-        <img src="IMG/c_logo.png" class="logo_skill" alt='logo'>
-        <img src="IMG/git_logo.png" class="logo_skill" alt='logo'>
-        <img src="IMG/bootstrap_logo.png" class="logo_skill" alt='logo'>
-        <img src="IMG/js_logo.png" class="logo_skill" alt='logo'>
-        <img src="IMG/wordpress_logo.png" class="logo_skill" alt='logo'>
-        <img src="IMG/php_logo.png" class="logo_skill" alt='logo'>
-        <img src="IMG/sql_logo.png" class="logo_skill" alt='logo'>
+        <img src="../IMG/html_logo.png" class="logo_skill" alt='logo'>
+        <img src="../IMG/css_logo.png" class="logo_skill" alt='logo'>
+        <img src="../IMG/sass_logo.png" class="logo_skill" alt='logo'>
+        <img src="../IMG/c_logo.png" class="logo_skill" alt='logo'>
+        <img src="../IMG/git_logo.png" class="logo_skill" alt='logo'>
+        <img src="../IMG/bootstrap_logo.png" class="logo_skill" alt='logo'>
+        <img src="../IMG/js_logo.png" class="logo_skill" alt='logo'>
+        <img src="../IMG/wordpress_logo.png" class="logo_skill" alt='logo'>
+        <img src="../IMG/php_logo.png" class="logo_skill" alt='logo'>
+        <img src="../IMG/sql_logo.png" class="logo_skill" alt='logo'>
       </div>
 
     </div>
@@ -148,8 +148,8 @@
     <div class="container_info--pre">
       <h2>Langues : </h2>
       <div class="flag">
-        <p><img src="IMG/german.png" class="logo_flag" alt='logo'></p></br>
-        <p><img src="IMG/english.png" class="logo_flag" alt='logo'>
+        <p><img src="../IMG/german.png" class="logo_flag" alt='logo'></p></br>
+        <p><img src="../IMG/english.png" class="logo_flag" alt='logo'>
       </div>
 
 
@@ -171,7 +171,7 @@
   <div class="container_info">
 
     <div class="container_info--picture">
-      <img src="IMG/exp2.jpg" class="picture_me" alt="exp">
+      <img src="../IMG/exp2.jpg" class="picture_me" alt="exp">
 
     </div>
 
@@ -204,13 +204,13 @@
   <div class="container_info">
 
     <div class="container_info--picture">
-      <img src="IMG/project.jpg" class="picture_me" alt="proj">
+      <img src="../IMG/project.jpg" class="picture_me" alt="proj">
 
     </div>
 
     <div class="container_info--CV">
       <h2>Projets réalisés:</h2>
-      <a href="http://axel-gordet.fr/projet_perso_2/" target='_blank'><img src="IMG/1erproj.png" class="project1"
+      <a href="http://axel-gordet.fr/projet_perso_2/" target='_blank'><img src="../IMG/1erproj.png" class="project1"
           alt="proj"></a>
 
     </div>
@@ -240,7 +240,7 @@
   <div class="container_info">
 
     <div class="container_info--picture">
-      <img src="IMG/guitare2.jpg" class="picture_me" alt="guitare">
+      <img src="../IMG/guitare2.jpg" class="picture_me" alt="guitare">
 
     </div>
 
